2002-02-23  Tor Lillqvist  <tml@iki.fi>

	* gtk/gtk.def: Add missing gtk_file_selection_get_select_multiple.
	Remove gtk_tree_view_column_cell_* entry points that were made
	private.

Sat Feb 23 15:43:46 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktogglebutton.c: Make button draw depressed whenever
	the user clicks / activates it, whether it's off/on/inconsistent.

Sat Feb 23 11:54:12 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/*.h gdk/*.h: Massive padding addition to class structures.

	* gtk/gtktextmark.h: Fix a FIXME about G_CONST_RETURN.

Fri Feb 22 20:28:18 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkrange.c: Applied patch from Thomas Leonard to make
	stepper click to scroll take effect immediately, rather than after
	a delay (#67649).

	* gtk/gtkrange.c: Remove right-click == step in trough since it
	isn't a useful binding and it's a large area to hit accidentally.
	(Leave it on the steppers since its more useful there and less
	likely to do accidentally.)

2002-02-23  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in (ALL_LINGUAS): Add "cy" to the language list.

2002-02-23  Jody Goldberg <jody@gnome.org>

	* gtk/gtkaccelgroup.c (gtk_accel_group_connect) : lower case the
	  key_val.
	(gtk_accel_group_connect_by_path) : ditto.
	(gtk_accel_group_disconnect_key) : ditto.

	* gtk/gtkwidget.c (gtk_widget_real_key_release_event) : simplify.
	(gtk_widget_real_key_press_event) : ditto.

Sat Feb 23 00:28:47 2002  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeviecolumn.c: Documented undocumented functions.

	* gtk/gtktreemodel.c: Documented undocumented functions.

Sat Feb 23 03:10:20 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.c (gtk_tree_view_key_press): honor min_width and
	max_width while resizing columns (pointed out by Jorn Baayen)

Fri Feb 22 19:17:46 2002  Owen Taylor  <otaylor@redhat.com>

	Patch from Matthias Clasen (#54488)

	* gtk/gtkwindow.c: Set/unset HAS_FOCUS flags here,